modified:   backend/app/app.js 	modified:   backend/app/oggetti.js 	new file:   backend/app/oggettiPubblicati.js 	modified:   swagger.yaml
Giorno: 26/05/2023
    User Story:
        Numero: 19
        Nome: Pubblicazione degli oggetti nascosti
    Task: API + RestFul API + Progettazione e implementazione DB
    Commenti:
        1) E’ stata realizzata nel file .yaml il path /oggettiPubblicati
        e lo schema relativo OggettoPubblicato. Una operazione di tipo POST
        su questo path permette ad un moderatore la pubblicazione di un oggetto
        nel sistema.
        2) Viene creato poi il file oggettiPubblicati.js che gestisce le richieste
        effettuate sul path /api/v1/oggettiPubblicati. Creata la classe OggettoPubblicato
        ed inserimento di metodi per la verifica della correttezza del formato della
        richiesta POST in entrata.
        3) Infine aggiunta del metodo che permette la pubblicazione dell’oggetto,
        in particolare agendo sul campo validated dell’oggetto il cui ID è passato
        nella richiesta portandolo al valore booleano true.
        4) Modifica poi del file app.js per permettere chiamate esterne a questo path
